# qt3DBasics

./: CMakeLists.txt  main.cpp
